# gnn_scheduler

./: .env.template  .flake8  .gitignore  .pylintrc  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
alphazero/base/: __init__.py  game.py
alphazero/envs/: __init__.py  (+1 more)
configs/: load_data.yaml  training.yaml
data/: README.md  dispatching_rule_performance.csv  experiment13_results.csv  experiment14_results.csv  experiment15_results.csv  experiment15_results_only_taillard_with_dpr.csv  experiment16_results.csv  experiment16_results_only_taillard_with_dpr.csv  experiment17_results.csv  experiment17_results_only_taillard_with_dpr.csv  experiment18_results.csv  experiment21_results.csv  experiment22_results.csv  experiment22_results_only_taillard_with_dpr.csv  experiment23_results.csv  experiment23_results_only_taillard_with_dpr.csv  experiment24_results.csv  experiment24_retrial_results.csv  experiment28_results.csv  experiment28_results_only_taillard_with_dpr.csv  experiment29_results.csv  experiment29_results_only_taillard_with_dpr.csv  experiment32_results.csv  experiment32_results_only_taillard_with_dpr.csv  experiment33_results.csv  experiment33_results_only_taillard_with_dpr.csv  experiment34_results.csv  experiment34_results_only_taillard_with_dpr.csv  experiment35_results.csv  experiment40_run_1_results.csv  experiment_4_results.csv  experiment_4_results_with_dpr.csv  experiment_5_results.csv  experiment_5_results_only_taillard_with_dpr.csv  experiment_5_results_with_dpr.csv  experiment_9_results.csv  instances.json  optimality_gaps_ta_grouped.csv  optimality_gaps_ta_grouped_with_sota.csv  pdrs_results.csv  (+1 more)
gnn_scheduler/: __init__.py  data.py  dataset.py  eval.py  metrics.py  solve_jssp.py  trainer.py  utils.py
notebooks/: create_plots.ipynb  create_supervised_dataset.ipynb  data_analysis.ipynb  play_instance.ipynb  pyg_data_storage.ipynb  tests.ipynb
reports/: augmented_benchmark_10machines.html  jssp_difficulty_prediction_instances.html
scripts/: _benchmark_baseline.py  _create_graph_data.py  _create_jssp_solutions.py  _divide_json.py  _eval.py  _test_data_leak.py  _test_store_each_n_steps_dist.py  _train.py  create_pdrs_results.py  tests.py
tests/: test_connect2_env.py
tutorial/: jssp_introduction.ipynb
(+198 files in other folders)
