[tool.poetry]
name = "gnn_scheduler"
version = "0.1.0"
description = "Job-Shop Scheduling Problem (JSSP) with Graph Neural Networks (GNNs) and Tree Search."
authors = ["Pabloo22 <pablete.arino@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.1"
gymnasium = "^0.28.1"
numpy = "^1.25.0"
matplotlib = "^3.8.1"
ortools = "^9.7.2996"
ipykernel = "^6.26.0"
pandas = "^2.1.3"
tk = "^0.1.0"
graphviz = "^0.20.1"
pygraphviz = "^1.11"
python-dotenv = "^1.0.0"
torch-geometric = "^2.4.0"
wandb = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
