[tool.poetry]
name = "gnn_scheduler"
version = "0.1.0"
description = "Job-Shop Scheduling Problem (JSSP) with Graph Neural Networks (GNNs)."
authors = ["Pabloo22 <pablo.arino22@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.0"
matplotlib = "^3.8.1"
ipykernel = "^6.26.0"
pandas = "^2.1.3"
graphviz = "^0.20.1"
pygraphviz = "^1.11"
python-dotenv = "^1.0.0"
omegaconf = "^2.3.0"
job-shop-lib = {version = "^1.0.0a5", allow-prereleases = true}
tqdm = "^4.67.1"
torch = "^2.6.0"
torch-geometric = "^2.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^3.0.2"


[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
